Organizing css, datalists replaced with selects, extra spaces between divs resolved

--- a/assets/css/addProperty.css
+++ b/assets/css/addProperty.css
@@ -46,14 +46,14 @@ section, #footer{
     -o-border-radius: 5px 5px 0px 0px;  
     border-radius: 5px 5px 0px 0px;
 }
-#wizardButtons input:last-of-type{
+#wizardButtons input:last-of-type{	
 	-webkit-border-radius: 0px 0px 5px 5px;
     -moz-border-radius:  0px 0px 5px 5px;
     -ms-border-radius: 0px 0px 5px 5px;
     -o-border-radius: 0px 0px 5px 5px;  
     border-radius:  0px 0px 5px 5px;
 }
-#wizardButtons input{
+#wizardButtons input{	
 	cursor: default;	
 	width: 100%;
 	padding: 10px 0px 10px 0px;    	
@@ -88,11 +88,9 @@ section, #footer{
     text-shadow: 0 -1px 0 #70AAD7;
 }
 
-/* stilizare buton submit, previuos si next */
-#addPropertyForm input[type=submit], #addPropertyForm input[type=button]{
+#addPropertyForm #traverse input{
 	float: left;
-	margin-left: 10px;	
-	width: 45%;		
+	margin-left: 10px;		
 }
 #addPropertyForm input[type=submit], #addPropertyForm input[type=button]{			
 	background-color: #15468D;
@@ -124,7 +122,7 @@ section, #footer{
 
 /* stilizare butoane addButton si removeButton */
 #addPropertyForm .remove input{
-	margin-left: 10px;
+	/*margin-left: 10px;*/
 	padding: 5px 1px 5px 1px;
 	width: 25px;
 }
@@ -159,13 +157,13 @@ section, #footer{
 
 /* stilizare formular */
 #addPropertyForm{
-	width: 100%;				
+	width: 100%;		
 	padding: 0px 0px 10px 0px;	
 }
 #addPropertyForm div{
 	margin: 5px 0px 5px 20px;
 }
-#addPropertyForm div input, #addPropertyForm div textarea{
+#addPropertyForm div input, #addPropertyForm div textarea, #addPropertyForm div select{
 	margin: 0px 0px 8px 0px;
 }
 #addPropertyForm fieldset legend{	
@@ -180,12 +178,11 @@ section, #footer{
 }
 
 /* stilizare inputuri si textarea */
-#addPropertyForm input:not([type=submit]):not([type=button]), #addPropertyForm textarea{
-	height: 27px;
+#addPropertyForm input:not([type=submit]):not([type=button]), #addPropertyForm textarea, #addPropertyForm div select{	
 	width: 70%;
 	padding: 4px 7px;	
 }
-#addPropertyForm input:not([type=submit]):not([type=button]), #addPropertyForm textarea{
+#addPropertyForm input:not([type=submit]):not([type=button]), #addPropertyForm textarea, #addPropertyForm div select{
 	border: 1px solid #aaa;
 	box-shadow: 0px 0px 3px #ccc, 0px 10px 25px #eee inset;
 	border-radius: 4px;	
@@ -196,5 +193,5 @@ section, #footer{
 	box-shadow: 0 0 3px #aaa;	
 }
 #addPropertyForm textarea{
-	height: 8%;
+	text-indent: 0px;
 }
