--- a/assets/css/characteristics.css
+++ b/assets/css/characteristics.css
@@ -1,5 +1,1 @@
 @import url(addProperty.css);
-
-#addPropertyForm textarea{
-	height: 20%;
-}
