--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -2,3 +2,6 @@
 #hiddenButton{
 	visibility: hidden;
 }
+#tabs #addPropertyForm #traverse{
+	margin-top: 7px;
+}
