--- a/assets/css/facilities.css
+++ b/assets/css/facilities.css
@@ -3,26 +3,47 @@ ul, li{
 	margin:0;
 	padding:0;
 }
-#addPropertyForm #facilities input{
-	float:left;
+li{	
+	float:left;	
+}
+#addPropertyForm #facilities li{
+	width: 100%;	
+}
+#addPropertyForm #facilities li > div{			
+	width: 66%;	 
+}
+#addPropertyForm #facilities li div > div:first-of-type{
+	width: 91%;
+}
+#addPropertyForm #facilities li div > div:last-of-type{
+	width: 25px;
+}
+#addPropertyForm #facilities div, #addPropertyForm #facilities input, #addPropertyForm #facilities label{
+	float:left;	
 }
 #addPropertyForm #facilities div div{		
-	margin: 5px 0px 5px 0px;	
+	margin: 0px;
 }
+#addPropertyForm #roofacilitiesms li div > div:first-of-type{
+	margin-right: 10px;
+}
+#addPropertyForm #facilities li > div:first-of-type, #addPropertyForm #facilities > div:last-of-type, 
 #addPropertyForm #facilities #addButton, #addPropertyForm #facilities input:not([type=button]){
 	clear:left;
 }
-/*
 #addPropertyForm #facilities input:not([type=submit]):not([type=button]){
-	width: 45%;
+	width: 100%;
 }
-*/
-
 #addPropertyForm #facilities .add input{			
-	width: 20%;
+	width: 100%;
 }
-#addPropertyForm #facilities .remove input{
+#addPropertyForm #facilities .remove{
 	margin-left: 10px;
+}
+#addPropertyForm #facilities .remove input{	
 	padding: 5px 1px 5px 1px;
 	width: 25px;
+}
+#addPropertyForm #facilities{
+	height: 53.4%;	
 }
