--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -17,7 +17,6 @@
 	width: 220px;
 	padding: 15px 8px;
 }
-
 #loginForm input:not([type=submit]):not([type=button]){
 	border: 1px solid #aaa;
 	box-shadow: 0px 0px 3px #ccc, 0px 10px 15px #eee inset;
@@ -107,4 +106,7 @@ form{
 	margin-left: 10px;
 	background-image: url("xicon.png");
 	background-repeat: no-repeat;
+}
+#loginForm input[type=submit], #loginForm input[type=button]{
+	width: 100px;	
 }
