--- a/assets/css/rooms.css
+++ b/assets/css/rooms.css
@@ -3,35 +3,47 @@ ul, li{
 	margin:0;
 	padding:0;
 }
-#addPropertyForm #rooms div div{	
-	border: 1px solid;
+li{	
 	float:left;	
-	width: 209px;	
 }
-#addPropertyForm #rooms div div:first-of-type{
+#addPropertyForm #rooms li{
+	width: 100%;	
+}
+#addPropertyForm #rooms li > div{		
+	width: 66%;	 
+}
+#addPropertyForm #rooms li div > div{
+	width: 44%;
+}
+#addPropertyForm #rooms li div > div:last-of-type{
+	width: 25px;
+}
+#addPropertyForm #rooms div, #addPropertyForm #rooms input, #addPropertyForm #rooms label, #addPropertyForm #rooms select{
+	float:left;	
+}
+#addPropertyForm #rooms div div{		
+	margin: 0px;
+}
+#addPropertyForm #rooms li div > div:first-of-type{
 	margin-right: 10px;
 }
-#addPropertyForm #rooms div .remove{	
-	float:left;	
-	width: 50px;
-}
-#addPropertyForm #rooms div div{	
-	margin: 5px 0px 5px 0px;	
-}
-#addPropertyForm #rooms div > div:last-of-type{
+#addPropertyForm #facilities li > div:first-of-type, #addPropertyForm #rooms > div:last-of-type, 
+#addPropertyForm #rooms #addButton, #addPropertyForm #rooms input:not([type=button]), #addPropertyForm #rooms select{
 	clear:left;
 }
-#addPropertyForm #rooms input:not([type=submit]):not([type=button]){	
+#addPropertyForm #rooms input:not([type=submit]):not([type=button]), #addPropertyForm #rooms select{
 	width: 100%;
 }
-#addPropertyForm #rooms .add input{	
-	width: 60%;
+#addPropertyForm #rooms .add input{			
+	width: 100%;
 }
-#addPropertyForm #rooms .add{
-	margin-top: 0;	
+#addPropertyForm #rooms .remove{
+	margin-left: 10px;
 }
 #addPropertyForm #rooms .remove input{	
-	margin-left: 10px;
 	padding: 5px 1px 5px 1px;
 	width: 25px;
+}
+#addPropertyForm #rooms{
+	height: 53.4%;	
 }
